--- a/pom.xml
+++ b/pom.xml
@@ -17,10 +17,10 @@
 		<java.version>11</java.version>
 	</properties>
 	<dependencies>
-		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-data-mongodb</artifactId>
-		</dependency>
+<!--		<dependency>-->
+<!--			<groupId>org.springframework.boot</groupId>-->
+<!--			<artifactId>spring-boot-starter-data-mongodb</artifactId>-->
+<!--		</dependency>-->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
@@ -31,6 +31,10 @@
 			<artifactId>spring-boot-devtools</artifactId>
 			<scope>runtime</scope>
 			<optional>true</optional>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-actuator</artifactId>
 		</dependency>
 		<dependency>
 			<groupId>org.projectlombok</groupId>
@@ -46,6 +50,22 @@
 			<groupId>io.swagger.codegen.v3</groupId>
 			<artifactId>swagger-codegen-maven-plugin</artifactId>
 			<version>3.0.27</version>
+		</dependency>
+		<dependency>
+			<groupId>com.fasterxml.jackson.jaxrs</groupId>
+			<artifactId>jackson-jaxrs-json-provider</artifactId>
+			<version>2.12.5</version>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.cxf</groupId>
+			<artifactId>cxf-core</artifactId>
+			<version>3.4.4</version>
+		</dependency>
+		<dependency>
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
+			<version>4.12</version>
+			<scope>test</scope>
 		</dependency>
 	</dependencies>
 
@@ -70,13 +90,14 @@
 <!--									<templateDirectory>${project.basedir}/templates/jaxrs</templateDirectory>-->
 									<generatorName>jaxrs-cxf</generatorName>
 									<skipOverwrite>true</skipOverwrite>
-									<output>${project.basedir}/src/main/java</output>
+<!--									<output>${project.basedir}</output>-->
 									<apiPackage>com.estoeban.animerecommender.service.api</apiPackage>
 									<modelPackage>com.estoeban.animerecommender.service.model</modelPackage>
-									<invokerPackage>com.estoeban.animerecommender.service.invoker</invokerPackage>
+<!--									<invokerPackage>com.estoeban.animerecommender.service.invoker</invokerPackage>-->
 									<configOptions>
 										<sourceFolder>src/main/java</sourceFolder>
 										<java8>true</java8>
+										<library>spring-mvc</library>
 									</configOptions>
 								</configuration>
 							</execution>
